[workspace]
resolver = "2"
members = [
    "crates/chain",
    "crates/core",
    "crates/file_store",
    "crates/electrum",
    "crates/esplora",
    "crates/bitcoind_rpc",
    "crates/testenv",
]
exclude = [
    "examples",
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]

[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
