[workspace]
resolver = "2"
members = [
    "example_cli",
    "example_electrum",
    "example_esplora",
    "example_bitcoind_rpc_polling",
    "example_wallet_electrum",
    "example_wallet_esplora_blocking",
    "example_wallet_esplora_async",
    "example_wallet_rpc",
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]
