[package]
name = "bdk_transaction"
version = "0.1.0"
edition = "2021"


[dependencies]
bdk_chain = { path = "../chain", default-features = false }
bdk_coin_select = "0.3.0"
paste = "1.0.15"
rand_core = "0.6.4"

[features]
default = ["std", "serde", "bdk_chain/default"]
std = ["bdk_chain/std"]
serde = ["bdk_chain/serde"]

[dev-dependencies]
bdk_transaction = { path = ".", features = ["default"] }
rand = "0.8.0"
anyhow = "1"
bdk_wallet = { path = "../wallet" }
