[package]
name = "example_bitcoind_rpc_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_bitcoind_rpc = { path = "../../crates/bitcoind_rpc" }
bdk_chain = { path = "../../crates/chain"}
example_cli = { path = "../example_cli" }
